[package]
name = "rust-cad"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1" }
bevy_egui = "0.36.0"

[features]
default = ["dev"]
dev = ["bevy/file_watcher"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
